# --- START OF FILE Cargo.toml ---
[package]
name = "a1314_daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
notify = "6.1"
tray-icon = "0.14"

# Embed the icon file at compile time
[package.metadata]
icon = "RottenApple.ico"

[build-dependencies]
winres = "0.1"
